<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditReservationActivity">

    <EditText
        android:id="@+id/edittext_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_customer_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edittext_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_customer_name"/>

    <EditText
        android:id="@+id/edittext_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email_address"/>

    <EditText
        android:id="@+id/edittext_date_of_rental"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_date_of_rental"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_phone_number"/>

    <EditText
        android:id="@+id/edittext_number_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_number_of_people"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date_of_rental"/>

    <EditText
        android:id="@+id/edittext_remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_hint_remark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_number_of_people"/>

    <Button
        android:id="@+id/button_update_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reservation_update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_remark" />

    <Button
        android:id="@+id/button_mark_event_to_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_mark_event_button"
        android:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update_reservation" />

    <Button
        android:id="@+id/button_cancel_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/reservation_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mark_event_to_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>